remove hello, and added google authorship

--- a/about/index.html
+++ b/about/index.html
@@ -30,7 +30,7 @@
 
 <link rel="canonical" href="http://miao.li/about/">
 <link href="http://miao.li/feed.xml" type="application/atom+xml" rel="alternate" title="Excel Feed">
-
+<link rel="author" href="https://plus.google.com/104973030351788858578?rel=author">
 
 <!-- http://t.co/dKP3o1e -->
 <meta name="HandheldFriendly" content="True">
@@ -76,8 +76,8 @@
 			<a href="#">About</a>
 			<ul class="dl-submenu">
 				<li>
-					<img src="http://miao.li/images/avatar.jpg" alt="zhimiao li photo" class="author-photo">
-					<h4>zhimiao li</h4>
+					<img src="http://miao.li/images/avatar.jpg" alt="zhimiao l. photo" class="author-photo">
+					<h4>zhimiao l.</h4>
 					<p>Try not to Excel in Everything, and find the one and stick to it. do have faith.</p>
 				</li>
 				<li><a href="http://miao.li/about/">Learn More</a></li>
@@ -90,7 +90,9 @@
 				<li>
 					<a href="http://facebook.com/truthurt"><i class="icon-facebook"></i> Facebook</a>
 				</li>
-				
+				<li>
+					<a href="https://plus.google.com/104973030351788858578"><i class="icon-google-plus"></i> Google+</a>
+				</li>
 				
 				<li>
 					<a href="http://github.com/fanzheng"><i class="icon-github"></i> GitHub</a>
@@ -139,7 +141,7 @@
 
 <div class="footer-wrapper">
   <footer role="contentinfo">
-    <span>&copy; 2014 zhimiao li. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/hpstr/">HPSTR Theme</a>.</span>
+    <span>&copy; 2014 zhimiao l.. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/hpstr/">HPSTR Theme</a>.</span>
   </footer>
 </div><!-- /.footer-wrapper -->
 
