--- a/about/index.html
+++ b/about/index.html
@@ -5,31 +5,31 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 <meta charset="utf-8">
-<title>关于 &#8211; Excel</title>
-<meta name="description" content="Excel everything">
+<title>关于 &#8211; Excel，数据分析，互联网和其他所有</title>
+<meta name="description" content="Excel，数据分析，互联网和其他所有。">
 
 
 <!-- Twitter Cards -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:image" content="http://miao.li/images/">
+<meta name="twitter:image" content="/images/">
 <meta name="twitter:title" content="关于">
-<meta name="twitter:description" content="Excel everything">
+<meta name="twitter:description" content="Excel，数据分析，互联网和其他所有。">
 <meta name="twitter:creator" content="@_3ry">
 
 <!-- Open Graph -->
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
 <meta property="og:title" content="关于">
-<meta property="og:description" content="Excel everything">
-<meta property="og:url" content="http://miao.li/about/">
-<meta property="og:site_name" content="Excel">
+<meta property="og:description" content="Excel，数据分析，互联网和其他所有。">
+<meta property="og:url" content="/about/">
+<meta property="og:site_name" content="Excel，数据分析，互联网和其他所有">
 
 
 
 
 
-<link rel="canonical" href="http://miao.li/about/">
-<link href="http://miao.li/feed.xml" type="application/atom+xml" rel="alternate" title="Excel Feed">
+<link rel="canonical" href="/about/">
+<link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Excel，数据分析，互联网和其他所有 Feed">
 <link rel="author" href="https://plus.google.com/104973030351788858578?rel=author">
 
 <!-- http://t.co/dKP3o1e -->
@@ -38,29 +38,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="http://miao.li/assets/css/main.min.css">
+<link rel="stylesheet" href="/assets/css/main.min.css">
 <!-- Webfonts -->
 <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
 
 <meta http-equiv="cleartype" content="on">
 
 <!-- Load Modernizr -->
-<script src="http://miao.li/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
+<script src="/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
 
 <!-- Icons -->
 <!-- 16x16 -->
-<link rel="shortcut icon" href="http://miao.li/favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico">
 <!-- 32x32 -->
-<link rel="shortcut icon" href="http://miao.li/favicon.png">
+<link rel="shortcut icon" href="/favicon.png">
 <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
-<link rel="apple-touch-icon-precomposed" href="http://miao.li/images/apple-touch-icon-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="/images/apple-touch-icon-precomposed.png">
 <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://miao.li/images/apple-touch-icon-72x72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/apple-touch-icon-72x72-precomposed.png">
 <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://miao.li/images/apple-touch-icon-114x114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/apple-touch-icon-114x114-precomposed.png">
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://miao.li/images/apple-touch-icon-144x144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/apple-touch-icon-144x144-precomposed.png">
 
+
+
+
+<style type="text/css">body {background-image:url(/images/giftly.png);}</style>
 
 
 </head>
@@ -71,16 +75,16 @@
 <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 	<button class="dl-trigger">Open Menu</button>
 	<ul class="dl-menu">
-		<li><a href="http://miao.li">Home</a></li>
+		<li><a href="">Home</a></li>
 		<li>
 			<a href="#">About</a>
 			<ul class="dl-submenu">
 				<li>
-					<img src="http://miao.li/images/" alt="李志渺 photo" class="author-photo">
+					<img src="/images/" alt="李志渺 photo" class="author-photo">
 					<h4>李志渺</h4>
 					<p>Try not to Excel in Everything, and find the one and stick to it. do have faith.</p>
 				</li>
-				<li><a href="http://miao.li/about/">Learn More</a></li>
+				<li><a href="/about/">Learn More</a></li>
 				<li>
 					<a href="mailto:zhi@miao.li"><i class="icon-envelope"></i> Email</a>
 				</li>
@@ -108,11 +112,11 @@
 		<li>
 			<a href="#">Posts</a>
 			<ul class="dl-submenu">
-				<li><a href="http://miao.li/posts/">All Posts</a></li>
-				<li><a href="http://miao.li/tags/">All Tags</a></li>
+				<li><a href="/posts/">All Posts</a></li>
+				<li><a href="/tags/">All Tags</a></li>
 			</ul>
 		</li>
-		<li><a href="http://miao.li/theme-setup">Theme Setup</a></li><li><a href="http://mademistakes.com">External Link</a></li>
+		
 	</ul><!-- /.dl-menu -->
 </nav><!-- /.dl-menuwrapper -->
 
@@ -141,13 +145,25 @@
 
 <div class="footer-wrapper">
   <footer role="contentinfo">
-    <span>&copy; 2014 李志渺. Powered by <a href="http://jekyllrb.com">Jekyll</a> using the <a href="http://mademistakes.com/hpstr/">HPSTR Theme</a>.</span>
+    <span>&copy; 2014 李志渺. Built with <a href="http://jekyllrb.com">Jekyll</a> ,<a href="http://mademistakes.com/hpstr/"> HPSTR</a> and<a href="#"> ❤ </a>.</span>
   </footer>
 </div><!-- /.footer-wrapper -->
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="http://miao.li/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-<script src="http://miao.li/assets/js/scripts.min.js"></script>
+<script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+<script src="/assets/js/scripts.min.js"></script>
+
+<!-- Asynchronous Google Analytics snippet -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-50410516-1', 'auto');  
+  ga('require', 'linkid', 'linkid.js');
+  ga('send', 'pageview');
+</script>
 
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
