--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
 
 <!-- Twitter Cards -->
 <meta name="twitter:card" content="summary">
-<meta name="twitter:image" content="/images/">
+<meta name="twitter:image" content="http://miao.li/images/">
 <meta name="twitter:title" content="关于">
 <meta name="twitter:description" content="Excel，数据分析，互联网和其他所有。">
 <meta name="twitter:creator" content="@_3ry">
@@ -21,15 +21,15 @@
 <meta property="og:type" content="article">
 <meta property="og:title" content="关于">
 <meta property="og:description" content="Excel，数据分析，互联网和其他所有。">
-<meta property="og:url" content="/about/">
+<meta property="og:url" content="http://miao.li/about/">
 <meta property="og:site_name" content="Excel，数据分析，互联网和其他所有">
 
 
 
 
 
-<link rel="canonical" href="/about/">
-<link href="/feed.xml" type="application/atom+xml" rel="alternate" title="Excel，数据分析，互联网和其他所有 Feed">
+<link rel="canonical" href="http://miao.li/about/">
+<link href="http://miao.li/feed.xml" type="application/atom+xml" rel="alternate" title="Excel，数据分析，互联网和其他所有 Feed">
 <link rel="author" href="https://plus.google.com/104973030351788858578?rel=author">
 
 <!-- http://t.co/dKP3o1e -->
@@ -38,33 +38,33 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- For all browsers -->
-<link rel="stylesheet" href="/assets/css/main.min.css">
+<link rel="stylesheet" href="http://miao.li/assets/css/main.min.css">
 <!-- Webfonts -->
 <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
 
 <meta http-equiv="cleartype" content="on">
 
 <!-- Load Modernizr -->
-<script src="/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
+<script src="http://miao.li/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
 
 <!-- Icons -->
 <!-- 16x16 -->
-<link rel="shortcut icon" href="/favicon.ico">
+<link rel="shortcut icon" href="http://miao.li/favicon.ico">
 <!-- 32x32 -->
-<link rel="shortcut icon" href="/favicon.png">
+<link rel="shortcut icon" href="http://miao.li/favicon.png">
 <!-- 57x57 (precomposed) for iPhone 3GS, pre-2011 iPod Touch and older Android devices -->
-<link rel="apple-touch-icon-precomposed" href="/images/apple-touch-icon-precomposed.png">
+<link rel="apple-touch-icon-precomposed" href="http://miao.li/images/apple-touch-icon-precomposed.png">
 <!-- 72x72 (precomposed) for 1st generation iPad, iPad 2 and iPad mini -->
-<link rel="apple-touch-icon-precomposed" sizes="72x72" href="/images/apple-touch-icon-72x72-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="72x72" href="http://miao.li/images/apple-touch-icon-72x72-precomposed.png">
 <!-- 114x114 (precomposed) for iPhone 4, 4S, 5 and post-2011 iPod Touch -->
-<link rel="apple-touch-icon-precomposed" sizes="114x114" href="/images/apple-touch-icon-114x114-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="114x114" href="http://miao.li/images/apple-touch-icon-114x114-precomposed.png">
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
-<link rel="apple-touch-icon-precomposed" sizes="144x144" href="/images/apple-touch-icon-144x144-precomposed.png">
+<link rel="apple-touch-icon-precomposed" sizes="144x144" href="http://miao.li/images/apple-touch-icon-144x144-precomposed.png">
 
 
 
 
-<style type="text/css">body {background-image:url(/images/giftly.png);}</style>
+<style type="text/css">body {background-image:url(http://miao.li/images/giftly.png);}</style>
 
 
 </head>
@@ -75,16 +75,16 @@
 <nav id="dl-menu" class="dl-menuwrapper" role="navigation">
 	<button class="dl-trigger">Open Menu</button>
 	<ul class="dl-menu">
-		<li><a href="">Home</a></li>
+		<li><a href="http://miao.li">Home</a></li>
 		<li>
 			<a href="#">About</a>
 			<ul class="dl-submenu">
 				<li>
-					<img src="/images/" alt="李志渺 photo" class="author-photo">
+					<img src="http://miao.li/images/" alt="李志渺 photo" class="author-photo">
 					<h4>李志渺</h4>
 					<p>Try not to Excel in Everything, and find the one and stick to it. do have faith.</p>
 				</li>
-				<li><a href="/about/">Learn More</a></li>
+				<li><a href="http://miao.li/about/">Learn More</a></li>
 				<li>
 					<a href="mailto:zhi@miao.li"><i class="icon-envelope"></i> Email</a>
 				</li>
@@ -112,8 +112,8 @@
 		<li>
 			<a href="#">Posts</a>
 			<ul class="dl-submenu">
-				<li><a href="/posts/">All Posts</a></li>
-				<li><a href="/tags/">All Tags</a></li>
+				<li><a href="http://miao.li/posts/">All Posts</a></li>
+				<li><a href="http://miao.li/tags/">All Tags</a></li>
 			</ul>
 		</li>
 		
@@ -150,8 +150,8 @@
 </div><!-- /.footer-wrapper -->
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
-<script src="/assets/js/scripts.min.js"></script>
+<script>window.jQuery || document.write('<script src="http://miao.li/assets/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+<script src="http://miao.li/assets/js/scripts.min.js"></script>
 
 <!-- Asynchronous Google Analytics snippet -->
 <script>
